deploy/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhythm
  labels:
    app.kubernetes.io/part-of: rhythm
